# pyannote-core

./: .buildinfo  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  COMMIT_MESSAGES.md  Dockerfile  LICENSE  MANIFEST.in  README.md  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  serialization.html  setup.cfg  setup.py  structure.html  visualization.html
.doctrees/: changelog.doctree  environment.pickle  index.doctree  reference.doctree  serialization.doctree  structure.doctree  visualization.doctree
.github/workflows/: doc.yml  documentation.yml  pythonpackage.yml  pythonpublish.yml  release.yml  test.yml
_downloads/e8ca67c74f8d50ca2efec7432f8b8c81/: segment.py
_modules/: index.html
_modules/pyannote/core/: annotation.html  feature.html  json.html  notebook.html  segment.html  timeline.html
_sources/: changelog.rst.txt  index.rst.txt  reference.rst.txt  serialization.rst.txt  structure.rst.txt
_static/: documentation_options.js
coverage/: python.txt  undoc.pickle
doc/: Makefile  index.ipynb  make.bat  pyannote.core.annotation.ipynb  pyannote.core.feature.ipynb  pyannote.core.scores.ipynb  pyannote.core.segment.ipynb  pyannote.core.timeline.ipynb  pyannote.core.transcription.ipynb  requirements.txt
doc/source/: changelog.rst  conf.py  index.rst  reference.rst  structure.rst
doc/source/pyplots/: annotation.py  introduction.py
doctrees/: changelog.doctree  environment.pickle  index.doctree  reference.doctree  serialization.doctree  structure.doctree  visualization.doctree
html/: .buildinfo  changelog.html  index.html  objects.inv  py-modindex.html  search.html  serialization.html
html/_sources/: changelog.rst.txt  index.rst.txt  visualization.rst.txt
notebook/: index.ipynb  pyannote.core.annotation.ipynb  pyannote.core.segment.ipynb  pyannote.core.timeline.ipynb
pyannote/: __init__.py
pyannote/core/: __init__.py  _version.py  annotation.py  base.py  feature.py  interval_tree.py  json.py  mapping.py  matrix.py  notebook.py  partition.py  scores.py  segment.py  test_scores.py  textgrid.py  tiered.py  time.py  timeline.py  transcription.py  util.py
pyannote/core/tests/: test_annotations.py  test_matrix.py  test_scores.py  test_segment.py  test_timeline.py  test_transcription.py
pyannote/core/utils/: cluster.py  distance.py  generators.py  helper.py  hierarchy.py  loaders.py  numpy.py  types.py  (+1 more)
pyplots/: timeline.py
tests/: test_annotations.py  test_features.py  test_scores.py  test_segment.py  test_timeline.py  test_transcription.py  utils.py
(+7 files in other folders)
